--- a/data/settings.json
+++ b/data/settings.json
@@ -4,12 +4,12 @@
   "language": "zh-CN",
   "loading": "random",
   "showGithub": true,
-  "title": "发现导航 - 精选实用导航网站",
-  "description": "发现导航 - 精选实用导航网站",
+  "title": "知识就是力量 - 精选实用导航网站",
+  "description": "知识就是力量 - 精选实用导航网站",
   "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,node.js",
   "theme": "Light",
   "appTheme": "App",
-  "footerContent": "<div style=\"font-weight: bold;\">共收录${total}个网站</div><div>Copyright © 2018-2022 nav3.cn, All Rights Reserved</div>",
+  "footerContent": "<script>\nvar _hmt = _hmt || [];\n(function() {\n  var hm = document.createElement(\"script\");\n  hm.src = \"https://hm.baidu.com/hm.js?117ac6784b4cb843960ef49d912f7fa9\";\n  var s = document.getElementsByTagName(\"script\")[0]; \n  s.parentNode.insertBefore(hm, s);\n})();\n</script>\n\n<script src=\"https://sdk.51.la/perf/js-sdk-perf.min.js\" crossorigin=\"anonymous\"></script>\n<script>\n  new LingQue.Monitor().init({id:\"JlWAi8aboehqTOrH\",sendSuspicious:true});\n</script>\n\n<script charset=\"UTF-8\" id=\"LA_COLLECT\" src=\"//sdk.51.la/js-sdk-pro.min.js\"></script>\n<script>LA.init({id: \"JlWBjbOFFcZ1KdIH\",ck: \"JlWBjbOFFcZ1KdIH\"})</script>\n\n<div style=\"font-weight: bold;\">共收录${total}个网站</div><div>Copyright  2018-2022 www.prlrr.com , All Rights Reserved</div>",
   "iconfontUrl": "//at.alicdn.com/t/font_2522843_wl70o31sy6.js",
   "baiduStatisticsUrl": "https://hm.baidu.com/hm.js?4582be7af7e7c95ef75351e07c6c32ba",
   "cnzzStatisticsUrl": "",
@@ -27,7 +27,7 @@
       "height": null
     }
   ],
-  "simThemeDesc": "这里收录多达 <b>${total}</b> 个优质网站， 助您工作、学习和生活",
+  "simThemeDesc": "这里收录多达 <b>${total}</b> 个优质网站，但仍存在1000+属于未公开站点，所以很遗憾的是这基本上属于一个私人导航。",
   "simThemeHeight": 350,
   "simThemeAutoplay": true,
   "sideThemeImages": [
