--- a/data/settings.json
+++ b/data/settings.json
@@ -11,7 +11,7 @@
   "appTheme": "App",
   "footerContent": "<script>\nvar _hmt = _hmt || [];\n(function() {\n  var hm = document.createElement(\"script\");\n  hm.src = \"https://hm.baidu.com/hm.js?117ac6784b4cb843960ef49d912f7fa9\";\n  var s = document.getElementsByTagName(\"script\")[0]; \n  s.parentNode.insertBefore(hm, s);\n})();\n</script>\n\n<script src=\"https://sdk.51.la/perf/js-sdk-perf.min.js\" crossorigin=\"anonymous\"></script>\n<script>\n  new LingQue.Monitor().init({id:\"JlWAi8aboehqTOrH\",sendSuspicious:true});\n</script>\n\n<script charset=\"UTF-8\" id=\"LA_COLLECT\" src=\"//sdk.51.la/js-sdk-pro.min.js\"></script>\n<script>LA.init({id: \"JlWBjbOFFcZ1KdIH\",ck: \"JlWBjbOFFcZ1KdIH\"})</script>\n\n<div style=\"font-weight: bold;\">共收录${total}个网站</div><div>Copyright  2018-2022 www.prlrr.com , All Rights Reserved</div>",
   "iconfontUrl": "//at.alicdn.com/t/font_2522843_wl70o31sy6.js",
-  "baiduStatisticsUrl": "https://hm.baidu.com/hm.js?4582be7af7e7c95ef75351e07c6c32ba",
+  "baiduStatisticsUrl": "",
   "cnzzStatisticsUrl": "",
   "simThemeImages": [
     {
@@ -21,18 +21,18 @@
       "height": null
     },
     {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
+      "src": "https://www.prlrr.com/wallpaper-API/php-api/BingApi.php",
       "url": "",
       "width": null,
       "height": null
     }
   ],
-  "simThemeDesc": "这里收录多达 <b>${total}</b> 个优质网站，但仍存在1000+属于未公开站点，所以很遗憾的是这基本上属于一个私人导航。",
+  "simThemeDesc": "这里收录多达 <b>${total}</b> 个优质公开网站，但仍存在1000+属于未公开站点，所以很遗憾的是这基本上属于一个私人导航。",
   "simThemeHeight": 350,
   "simThemeAutoplay": true,
   "sideThemeImages": [
     {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
+      "src": "https://www.prlrr.com/wallpaper-API/php-api/BingApi.php",
       "url": "",
       "width": null,
       "height": null
