--- a/data/settings.json
+++ b/data/settings.json
@@ -15,13 +15,19 @@
   "cnzzStatisticsUrl": "",
   "simThemeImages": [
     {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/sim-wallpaper.jpg",
+      "src": "https://api.ixiaowai.cn/gqapi/gqapi.php",
       "url": "",
       "width": null,
       "height": null
     },
     {
       "src": "https://www.prlrr.com/wallpaper-API/php-api/BingApi.php",
+      "url": "",
+      "width": null,
+      "height": null
+    },
+    {
+      "src": "https://api.ixiaowai.cn/gqapi/gqapi.php",
       "url": "",
       "width": null,
       "height": null
@@ -38,7 +44,7 @@
       "height": null
     },
     {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/sim-wallpaper.jpg",
+      "src": "https://api.ixiaowai.cn/gqapi/gqapi.php",
       "url": "",
       "width": null,
       "height": null
