rebot(CI): Update settings

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,7 +1,7 @@
 {
   "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
   "homeUrl": "https://nav3.cn",
-  "language": "en",
+  "language": "zh-CN",
   "loading": "loading2",
   "showGithub": false,
   "title": "知识就是力量 - 精选实用导航网站",
